contrast flash message fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -119,7 +119,7 @@ nav a:hover {
   text-align: left;
   font-family: var(--paragraph-font);
   font-style: italic;
-  color: orangered;
+  color: #ff0d00;
 }
 
 .hero-container {
